--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full-stack Live Practical</title>
 </head>
-<body>
-    <div>
-        <h1>Welcome to Fullstack </h1>
-        <h3>About Course</h3>
-        <p>Full-stack Web Development courses offered through Coursera equip learners with knowledge in building web, hybrid, and mobile solutions; understanding front-end frameworks.Typically it refers to the Hypertext Markup Language(HTML),Cascading Style Sheets(CSS) and JavaScript portion of web site production as opposed to the database or server-side programming. It emcompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devices and screen sizes</p>
+<body style= "background:lightyellow">
+    <h1 style="font-size: 300%;color:red;text-align: center;"> Welcome to Fullstack </h1>
+    <div style="background-color:aqua ;padding:5px;border: 4px outset red;text-align: left;"> 
+        <h2>About Course</h2>
     </div>
+        <p>Full-stack Web Development courses offered through Coursera equip learners with knowledge in building web, hybrid, and mobile solutions; understanding front-end frameworks.Typically it refers to the Hypertext Markup Language(HTML),Cascading Style Sheets(CSS) and JavaScript portion of web site production as opposed to the database or server-side programming. It emcompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devices and screen sizes</p>
 <br>
-    <div>
-            <h1>List of Practicals</h1>
-            <p>1. Create a Web page including HTML basic skeleton using Offline HTML editor and Online Sandbox Environment  <a href="p/practical-1.html">Practical-1</a></p>
+    <div style="background-color:aqua ;padding:5px;border: 4px outset red;text-align: left;">
+            <h2>List of Practicals</h2>
+    </div>
+            <p>1. Create a Web page including HTML basic skeleton using Offline HTML editor and Online Sandbox Environment  <a href="https://github.com/shailja025/practical-4/blob/master/practicals/practical-1.html">Practical-1</a></p>
             <hr>
-            <p>2. Live your First Web-Page on Git-Hub  <a href="p/practical-2.html">Practical-2</a></p>
+            <p>2. Live your First Web-Page on Git-Hub  <a href="https://github.com/shailja025/practical-4/blob/master/practicals/practical-2.html">Practical-2</a></p>
             <hr>
-            <p>3. Create a web page showing a basic html structure using character Entities and span Tag  <a href="p/practical-3.html">Practical-3</a></p>
+            <p>3. Create a web page showing a basic html structure using character Entities and span Tag  <a href="https://github.com/shailja025/practical-4/blob/master/practicals/practical-3.html">Practical-3</a></p>
             <hr>
-            <p>4. Create a website having list of all practical and their individual practical page links  <a href="p/practical-4..html">Practical-4</a></p>
-        </div>
-</body>
+            <p>4. Create a website having list of all practical and their individual practical page links  <a href="https://github.com/shailja025/practical-4/blob/master/practicals/practical-4.html">Practical-4</a></p>
+            <hr>
+        </body>
 </html>
