--- a/practicals/practical-1.html
+++ b/practicals/practical-1.html
@@ -55,6 +55,9 @@
     </div>
     <br>
     <h3>OUTPUT:</h3>
-    <img style="width:80%;display:block;margin-left:auto;margin-right:auto" src="..\img\practical-1.jpg">
+    <img style="width:80%;display:block;margin-left:auto;margin-right:auto" src="https://github.com/shailja025/index.html/blob/master/img/practical-1.jpg">
+    <img style="width:80%;display:block;margin-left:auto;margin-right:auto" src="https://github.com/shailja025/index.html/blob/master/img/practical-1b.jpg">
+    <img style="width:80%;display:block;margin-left:auto;margin-right:auto" src="https://github.com/shailja025/index.html/blob/master/img/practical-1c.jpg">
+
 </body>
 </html>
