--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Full-stack Live Practical</title>
 </head>
 <body style= "background:lightyellow">
-    <h1 style="font-size: 300%;color:red;text-align: center;"> Welcome to Fullstack </h1>
+    <h2 style="font-size: 300%;color:red;text-align: center;">Welcome to Fullstack Course</h2>
     <div style="background-color:aqua ;padding:5px;border: 4px outset red;text-align: left;"> 
         <h2>About Course</h2>
     </div>
@@ -24,8 +24,4 @@
             <p>4. Create a website having list of all practical and their individual practical page links  <a href="https://github.com/shailja025/practical-4/blob/master/practicals/practical-4.html">Practical-4</a></p>
             <hr>
         </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> d6ee79fef4c3a49f2500b9e4f2d2b17cec9866f8
