--- a/practicals/practical-1.html
+++ b/practicals/practical-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assissment-2</title>
+    <title>Full Stack:Assissment-1</title>
 </head>
 <body style="background-color: cyan;">
     <h2 style="color: red;">Practical-1:Create a Web page including HTML basic skeleton using Offline HTML editor and Online Sandbox Environment</h2>
