--- a/practicals/practical-2.html
+++ b/practicals/practical-2.html
@@ -31,9 +31,9 @@ Dismissing concerns that his career was over, Ronaldo returned to competitive pl
 <br>
 <h1>Outputs:</h1>
 <h3 style="text-align: center;">Code</h3>
-<img style="width:80%;display:block;margin-left:auto;margin-right:auto" src="https://github.com/shailja025/index.html/blob/master/img/practical-2b.JPG">
+<img style="width:80%;display:block;margin-left:auto;margin-right:auto" src="practical-2b.JPG">
 <br>
 <h3 style="text-align: center;">Output</h3>
-<img style="width:80%;display:block;margin-left:auto;margin-right:auto" src="https://github.com/shailja025/index.html/blob/master/img/practical-2.JPG">
+<img style="width:80%;display:block;margin-left:auto;margin-right:auto" src="practical-2.JPG">
 </body>
 </html>
