--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div style="background-color:aqua ;padding:5px;border: 4px outset red;text-align: left;">
             <h2>List of Practicals</h2>
     </div>
-            <p>1. Create a Web page including HTML basic skeleton using Offline HTML editor and Online Sandbox Environment  <a href="https://github.com/shailja025/practical-4/blob/master/practicals/practical-1.html">Practical-1</a></p>
+            <p>1. Create a Web page including HTML basic skeleton using Offline HTML editor and Online Sandbox Environment  <a href="https://shailja025.github.io/Assissment4/practicals/practical-1.html">Practical-1</a></p>
             <hr>
-            <p>2. Live your First Web-Page on Git-Hub  <a href="https://github.com/shailja025/practical-4/blob/master/practicals/practical-2.html">Practical-2</a></p>
+            <p>2. Live your First Web-Page on Git-Hub  <a href="https://shailja025.github.io/Assissment4/practicals/practical-2.html">Practical-2</a></p>
             <hr>
-            <p>3. Create a web page showing a basic html structure using character Entities and span Tag  <a href="https://github.com/shailja025/practical-4/blob/master/practicals/practical-3.html">Practical-3</a></p>
+            <p>3. Create a web page showing a basic html structure using character Entities and span Tag  <a href="https://shailja025.github.io/Assissment4/practicals/practical-3.html">Practical-3</a></p>
             <hr>
-            <p>4. Create a website having list of all practical and their individual practical page links  <a href="https://github.com/shailja025/practical-4/blob/master/practicals/practical-4.html">Practical-4</a></p>
+            <p>4. Create a website having list of all practical and their individual practical page links  <a href="https://shailja025.github.io/Assissment4/practicals/practical-4.html">Practical-4</a></p>
             <hr>
         </body>
 </html>
