--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <hr>
             <p>4. Create a website having list of all practical and their individual practical page links  <a href="https://shailja025.github.io/Assissment4/practicals/practical-4.html">Practical-4</a></p>
             <hr>
+            <p>5. Create a Web-Page showing the use of Image-Map in the Web Application.  <a href="">Practical-5</a></p>
+            <hr>
         </body>
 </html>
 
