--- a/practicals/practical-5.html
+++ b/practicals/practical-5.html
@@ -12,28 +12,28 @@
     </head>
 <body style="background-color: rgba(139, 135, 135, 0.87);">
     <h2 style="color: red;">Practical-5:Create a Web-Page showing the use of Image-Map in the Web Application.</h2>
+        <br>
+    <img src="https://github.com/shailja025/FS_Assignment5/blob/master/assignment/main.JPG?raw=true" alt="Head" usemap="#head" width="auto" height="auto" class="centre">
     <br>
     <br>
-<img src="https://github.com/shailja025/FS_Assignment5/blob/master/assignment/main.JPG?raw=true" alt="Head" usemap="#head" width="auto" height="auto" class="centre">
-<br>
-<br>
-<h1 style="text-align: center;color: white;">Inroduction to Front End Technologies</h1>
-<br>
-<img src="https://github.com/shailja025/FS_Assignment5/blob/master/assignment/Practical1.jpg?raw=true" alt="Logo" usemap="#logo" width="400" height="350" class="centre">
-<p style="text-align: center;color: red;"><b>Click on the logo to go to a new page and read more about the technology:</b></p>
-<map name="head">
-    <area shape="rect" coords="10,9,148,78" alt="Home" href="https://shailja025.github.io/Assissment4/">
-    <area shape="rect" coords="152,9,379,78" alt="Practical 1" href="https://shailja025.github.io/Assissment4/practicals/practical-1.html">
-    <area shape="rect" coords="384,9,638,78" alt="Practical 2" href="https://shailja025.github.io/Assissment4/practicals/practical-2.html">
-    <area shape="rect" coords="642,9,885,78" alt="Practical 3" href="https://shailja025.github.io/Assissment4/practicals/practical-3.html">
-    <area shape="rect" coords="890,9,1137,78" alt="Practical 4" href="https://shailja025.github.io/Assissment4/practicals/practical-4.html">
-    <area shape="rect" coords="1142,9,1387,78" alt="Practical 5" href="https://shailja025.github.io/FS_Assignment5/">
-</map>
-<map name="logo">
-    <area shape="rect" coords="25,16,179,172" alt="HTML" href="https://shailja025.github.io/FS_Assignment5/assignment/htmlfile.html">
-    <area shape="rect" coords="29,202,177,344" alt="JavaScript" href="https://shailja025.github.io/FS_Assignment5/assignment/javaScriptfile.html">
-    <area shape="circle" coords="294,100,94" alt="CSS" href="https://shailja025.github.io/FS_Assignment5/assignment/cssfile.html">
-    <area shape="poly" coords="241,230,300,210,356,235,340,312,295,332,250,306" alt="BootStrap" href="https://shailja025.github.io/FS_Assignment5/assignment/bootstrapfile.html">
-  </map>
-</body>
-</html>
+    <h1 style="text-align: center;color: white;">Inroduction to Front End Technologies</h1>
+    <br>
+    <img src="https://github.com/shailja025/FS_Assignment5/blob/master/assignment/Practical1.jpg?raw=true" alt="Logo" usemap="#logo" width="400" height="350" class="centre">
+    <h3 style="text-align: center;color: red;"><b>Click on the logo to go to a new page and read more about the technology:</b></h3>
+    <map name="head">
+        <area shape="rect" coords="10,9,148,78" alt="Home" href="https://shailja025.github.io/Assissment4/">
+        <area shape="rect" coords="152,9,379,78" alt="Practical 1" href="https://shailja025.github.io/Assissment4/practicals/practical-1.html">
+        <area shape="rect" coords="384,9,638,78" alt="Practical 2" href="https://shailja025.github.io/Assissment4/practicals/practical-2.html">
+        <area shape="rect" coords="642,9,885,78" alt="Practical 3" href="https://shailja025.github.io/Assissment4/practicals/practical-3.html">
+        <area shape="rect" coords="890,9,1137,78" alt="Practical 4" href="https://shailja025.github.io/Assissment4/practicals/practical-4.html">
+        <area shape="rect" coords="1142,9,1387,78" alt="Practical 5" href="https://shailja025.github.io/Assissment4/practicals/practical-5.html">
+    </map>
+    <map name="logo">
+        <area shape="rect" coords="25,16,179,172" alt="HTML" href="https://shailja025.github.io/FS_Assignment5/assignment/htmlfile.html">
+        <area shape="rect" coords="29,202,177,344" alt="JavaScript" href="https://shailja025.github.io/FS_Assignment5/assignment/javaScriptfile.html">
+        <area shape="circle" coords="294,100,94" alt="CSS" href="https://shailja025.github.io/FS_Assignment5/assignment/cssfile.html">
+        <area shape="poly" coords="241,230,300,210,356,235,340,312,295,332,250,306" alt="BootStrap" href="https://shailja025.github.io/FS_Assignment5/assignment/bootstrapfile.html">
+      </map>
+    </body>
+    </html>
+    
