--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full-stack Live Practical</title>
 </head>
-<body style= "background:lightyellow">
+<body style= "background: rgb(167, 167, 167)">
     <h2 style="font-size: 300%;color:red;text-align: center;">Welcome to Fullstack Course</h2>
     <div style="background-color:aqua ;padding:5px;border: 4px outset red;text-align: left;"> 
         <h2>About Course</h2>
@@ -24,6 +24,8 @@
             <p>4. Create a website having list of all practical and their individual practical page links  <a href="https://shailja025.github.io/Assissment4/practicals/practical-4.html">Practical-4</a></p>
             <hr>
             <p>5. Create a Web-Page showing the use of Image-Map in the Web Application.  <a href="https://shailja025.github.io/FS_Assignment5/">Practical-5</a></p>
+            <hr>
+            <p>6. Create a Card Layout using CSS layout properties.  <a href="https://shailja025.github.io/FS_Assignment5/">Practical-6</a></p>
             <hr>
         </body>
 </html>
