--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Full-stack Live Practical</title>
 </head>
 <body style= "background: rgb(167, 167, 167)">
-    <h2 style="font-size: 300%;color:red;text-align: center;">Welcome to Fullstack Course</h2>
+    <h2 style="font-size: 300%;color: white ;text-align: center;">Welcome to Fullstack Course</h2>
     <div style="background-color:aqua ;padding:5px;border: 4px outset red;text-align: left;"> 
         <h2>About Course</h2>
     </div>
