--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style= "background: rgb(167, 167, 167)">
     <h2 style="font-size: 300%;color: white ;text-align: center;">Welcome to Fullstack Course</h2>
-    <div style="background-color:aqua ;padding:5px;border: 4px outset red;text-align: left;"> 
+    <div style="background-color:aqua ;padding:5px;border: 4px outset white;text-align: left;"> 
         <h2>About Course</h2>
     </div>
         <p>Full-stack Web Development courses offered through Coursera equip learners with knowledge in building web, hybrid, and mobile solutions; understanding front-end frameworks.Typically it refers to the Hypertext Markup Language(HTML),Cascading Style Sheets(CSS) and JavaScript portion of web site production as opposed to the database or server-side programming. It emcompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devices and screen sizes</p>
