--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
         <p>Full-stack Web Development courses offered through Coursera equip learners with knowledge in building web, hybrid, and mobile solutions; understanding front-end frameworks.Typically it refers to the Hypertext Markup Language(HTML),Cascading Style Sheets(CSS) and JavaScript portion of web site production as opposed to the database or server-side programming. It emcompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devices and screen sizes</p>
 <br>
-    <div style="background-color:aqua ;padding:5px;border: 4px outset red;text-align: left;">
+    <div style="background-color:aqua ;padding:5px;border: 4px outset white ;text-align: left;">
             <h2>List of Practicals</h2>
     </div>
             <p>1. Create a Web page including HTML basic skeleton using Offline HTML editor and Online Sandbox Environment  <a href="https://shailja025.github.io/Assissment4/practicals/practical-1.html">Practical-1</a></p>
@@ -25,7 +25,7 @@
             <hr>
             <p>5. Create a Web-Page showing the use of Image-Map in the Web Application.  <a href="https://shailja025.github.io/FS_Assignment5/">Practical-5</a></p>
             <hr>
-            <p>6. Create a Card Layout using CSS layout properties.  <a href="https://shailja025.github.io/FS_Assignment5/">Practical-6</a></p>
+            <p>6. Create a Card Layout using CSS layout properties.  <a href="https://shailja025.github.io/FS_Assignment6/">Practical-6</a></p>
             <hr>
         </body>
 </html>
