--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <hr>
             <p>6. Create a Card Layout using CSS layout properties.  <a href="https://shailja025.github.io/FS_Assignment6/">Practical-6</a></p>
             <hr>
+            <p>7. Create a Web Page Layout using div tags.  <a href="https://shailja025.github.io/FS_Assignment7/index.html">Practical-7</a></p>
+            <hr>
         </body>
 </html>
 
