--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <hr>
             <p>7. Create a Web Page Layout using div tags.  <a href="https://shailja025.github.io/FS_Assignment7/index.html">Practical-7</a></p>
             <hr>
+            <p>8. Create a Web Page having Fixed Navigation Bar with the given content.  <a href="https://shailja025.github.io/FS_Assignment8/">Practical-8</a></p>
+            <hr>
         </body>
 </html>
 
