--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <hr>
             <p>8. Create a Web Page having Fixed Navigation Bar with the given content.  <a href="https://shailja025.github.io/FS_Assignment8/">Practical-8</a></p>
             <hr>
+            <p>9. Create a Responsive Web Layout with Responsive Navigation Bar.  <a href="https://shailja025.github.io/FS_assignment9/index.html">Practical-9</a></p>
+            <hr>
         </body>
 </html>
 
