--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <hr>
             <p>9. Create a Responsive Web Layout with Responsive Navigation Bar.  <a href="https://shailja025.github.io/FS_assignment9/index.html">Practical-9</a></p>
             <hr>
+            <p>10. Create a Responsive Side-Bar Navigation Menu.  <a href="https://shailja025.github.io/FS_Assignment10/index.html">Practical-10</a></p>
+            <hr>
         </body>
 </html>
 
