--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <hr>
             <p>11. Create a Table that represent Live Practical Book Records.  <a href="https://shailja025.github.io/FS_Assignment11/index.html">Practical-11</a></p>
             <hr>
+            <p>12. Create a Custom Price Table Template.  <a href="https://shailja025.github.io/FS_Assignment12/index.html">Practical-12</a></p>
+            <hr>
         </body>
 </html>
 
