--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <hr>
             <p>12. Create a Custom Price Table Template.  <a href="https://shailja025.github.io/FS_Assignment12/index.html">Practical-12</a></p>
             <hr>
+            <p>13. Create a Responsive Footer Template.  <a href="https://shailja025.github.io/FS_Assignment13/index.html">Practical-13</a></p>
+            <hr>
         </body>
 </html>
 
