--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             <hr>
             <p>14. Create Login Form with different Templates.  <a href="https://shailja025.github.io/FS_Assignment14/index.html">Practical-14</a></p>
             <hr>
+            <p>15. Create a Counter Page using JavaScript as per the attached Templates.  <a href="https://shailja025.github.io/FS_Assignment15/index.html">Practical-15</a></p>
+            <hr>
         </body>
 </html>
 
