--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <hr>
             <p>15. Create a Counter Page using JavaScript as per the attached Templates.  <a href="https://shailja025.github.io/FS_Assignment15/index.html">Practical-15</a></p>
             <hr>
+            <p>16. Create a To-do List using JavaScript.  <a href="https://shailja025.github.io/FS_Assignment16/">Practical-16</a></p>
+            <hr>
         </body>
 </html>
 
