--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <hr>
             <p>16. Create a To-do List using JavaScript.  <a href="https://shailja025.github.io/FS_Assignment16/">Practical-16</a></p>
             <hr>
+            <p>17. Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage.  <a href="https://shailja025.github.io/FS_Assignment17/index.html">Practical-17</a></p>
+            <hr>
         </body>
 </html>
 
