--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             <hr>
             <p>17. Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage.  <a href="https://shailja025.github.io/FS_Assignment17/index.html">Practical-17</a></p>
             <hr>
+            <p>18. Create an HTML Form and Validate it with Javascript (Client-side Programming Language).   <a href="https://shailja025.github.io/FS_Assignmnet18/index.html">Practical-18</a></p>
+            <hr>
+            <p>19. Create an HTML page with Multi-Step Form. <a href="https://shailja025.github.io/FS_Assignmnet19/">Practical-19</a></p>
+            <hr>
         </body>
 </html>
 
