--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             <hr>
             <p>19. Create an HTML page with Multi-Step Form. <a href="https://shailja025.github.io/FS_Assignmnet19/">Practical-19</a></p>
             <hr>
+            <p>20. Create a Responsive Layout using Bootstrap Grid System. <a href="https://shailja025.github.io/FS_Assignment20/">Practical-20</a></p>
+            <hr>
         </body>
 </html>
 
